--- a/package.json
+++ b/package.json
@@ -11,11 +11,22 @@
     "axios": "^0.21.0",
     "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
-    "element-ui": "^2.14.1",
+    "default-passive-events": "^2.0.0",
+    "dplayer": "^1.26.0",
+    "element-ui": "^2.15.1",
+    "flv.js": "^1.5.0",
+    "github-markdown-css": "^4.0.0",
+    "highlight.js": "^10.7.1",
+    "hls.js": "^0.14.17",
     "js-cookie": "^2.2.1",
+    "marked": "^2.0.1",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
+    "vue-aplayer": "^1.6.1",
+    "vue-codemirror-lite": "^1.0.4",
+    "vue-i18n": "^8.24.1",
     "vue-infinite-loading": "^2.4.5",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.4.8",
     "vuex": "^3.5.1"
   },
